<resources>
    <string name="app_name">com.example.alex.taskmanager.Task Manager</string>
    <string name="action_settings">Settings</string>
    <string name="add_Task_Title">New com.example.alex.taskmanager.Task</string>
    <string name="task_prompt">What do you need to do?</string>
    <string name="edit_task_title">Enter your task</string>
    <string name="date_prompt">When is it due?</string>
    <string name="edit_date">Enter the due date</string>
    <string name="save_new_task">Save</string>
</resources>
